@@ -83,7 +83,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
@@ -101,6 +101,7 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.logging.Level;
+import java.util.logging.Logger;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
@@ -179,6 +180,9 @@ public class QueueTest {
 
         // did it bind back to the same object?
         assertSame(q.getItems()[0].task, testProject);
+
+        // Clear the queue
+        assertTrue(q.cancel(testProject));
     }
 
     /**
@@ -197,6 +201,9 @@ public class QueueTest {
         // The current counter should be the id from the item brought back
         // from the persisted queue.xml.
         assertEquals(3, Queue.WaitingItem.getCurrentCounterValue());
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("test", FreeStyleProject.class)));
     }
 
     /**
@@ -433,7 +440,7 @@ public class QueueTest {
 
     @Issue("JENKINS-10944")
     @Test public void flyweightTasksBlockedByShutdown() throws Exception {
-        r.jenkins.doQuietDown(true, 0, null);
+        r.jenkins.doQuietDown(true, 0, null, false);
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task = new TestFlyweightTask(cnt, null);
         assertTrue(Queue.isBlockedByShutdown(task));
@@ -505,6 +512,9 @@ public class QueueTest {
         assertNotNull(queueItem);
         String tagName = queueItem.getDocumentElement().getTagName();
         assertTrue(tagName.equals("blockedItem") || tagName.equals("buildableItem"));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
 
     @Issue("JENKINS-28926")
@@ -809,19 +819,18 @@ public class QueueTest {
      */
     @Test public void accessControl() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate(p.getFullName(), alice));
         p.getBuildersList().add(new TestBuilder() {
             @Override
             public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
-                assertEquals(alice2, Jenkins.getAuthentication2());
+                assertEquals(alice, Jenkins.getAuthentication2());
                 return true;
             }
         });
         r.buildAndAssertSuccess(p);
     }
 
-    private static Authentication alice2 = new UsernamePasswordAuthenticationToken("alice", "alice", Collections.emptySet());
-    private static org.acegisecurity.Authentication alice = org.acegisecurity.Authentication.fromSpring(alice2);
+    private static Authentication alice = new UsernamePasswordAuthenticationToken("alice", "alice", Collections.emptySet());
 
 
     /**
@@ -836,11 +845,11 @@ public class QueueTest {
         DumbSlave s2 = r.createSlave();
 
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate(p.getFullName(), alice));
         p.getBuildersList().add(new TestBuilder() {
             @Override
             public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
-                assertEquals(alice2, Jenkins.getAuthentication2());
+                assertEquals(alice, Jenkins.getAuthentication2());
                 return true;
             }
         });
@@ -873,7 +882,7 @@ public class QueueTest {
             if (node.getNodeName().equals(blocked)) {
                 // ACL that allow anyone to do anything except Alice can't build.
                 SparseACL acl = new SparseACL(null);
-                acl.add(new PrincipalSid(alice2), Computer.BUILD, false);
+                acl.add(new PrincipalSid(alice), Computer.BUILD, false);
                 acl.add(new PrincipalSid("anonymous"), Jenkins.ADMINISTER, true);
                 return acl;
             }
@@ -882,8 +891,8 @@ public class QueueTest {
     }
 
     @Test public void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, InterruptedException {
-        FreeStyleProject project1 = r.createFreeStyleProject();
-        FreeStyleProject project2 = r.createFreeStyleProject();
+        FreeStyleProject project1 = r.createFreeStyleProject("project1");
+        FreeStyleProject project2 = r.createFreeStyleProject("project2");
         TopLevelItemDescriptor descriptor = new TopLevelItemDescriptor(FreeStyleProject.class) {
          @Override
             public FreeStyleProject newInstance(ItemGroup parent, String name) {
@@ -932,7 +941,11 @@ public class QueueTest {
         for (var p : r.jenkins.allItems(FreeStyleProject.class)) {
             for (var b : p.getBuilds()) {
                 r.waitForCompletion(b);
+                b.delete();
+                Logger.getLogger(QueueTest.class.getName()).info(() -> "Waited for " + b);
             }
+            p.delete();
+            Logger.getLogger(QueueTest.class.getName()).info(() -> "Cleaned up " + p);
         }
     }
 
@@ -958,10 +971,9 @@ public class QueueTest {
     }
 
     @Test public void waitForStartAndCancelBeforeStart() throws Exception {
-        final OneShotEvent ev = new OneShotEvent();
         FreeStyleProject p = r.createFreeStyleProject();
 
-        QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(10);
+        QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(30);
         final Queue.Item item = Queue.getInstance().getItem(p);
         assertNotNull(item);
 
@@ -1074,6 +1086,9 @@ public class QueueTest {
         r.createWebClient().withBasicApiToken(bob).goToXml(url); // OK, 200
         r.createWebClient().withBasicApiToken(james).assertFails(url, HttpURLConnection.HTTP_FORBIDDEN); // only DISCOVER → AccessDeniedException
         r.createWebClient().withBasicApiToken(alice).assertFails(url, HttpURLConnection.HTTP_NOT_FOUND); // not even DISCOVER
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(project));
     }
 
     //we force the project not to be executed so that it stays in the queue
@@ -1117,6 +1132,19 @@ public class QueueTest {
         Queue.Item[] items = q.getItems();
         assertEquals(Arrays.asList(items).toString(), 11, items.length);
         assertEquals("Loading the queue should not generate saves", 0, QueueSaveSniffer.count);
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("a", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("b", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("c", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("d", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("e", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("f", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("g", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("h", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("i", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("j", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("k", FreeStyleProject.class)));
     }
 
     @TestExtension("load_queue_xml")
@@ -1170,7 +1198,7 @@ public class QueueTest {
         Queue.Item currentOne = items[0];
         assertFalse(currentOne.getFuture().isCancelled());
 
-        WebRequest request = new WebRequest(new URL(r.getURL() + urlProvider.apply(currentOne)), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(r.getURL() + urlProvider.apply(currentOne)).toURL(), HttpMethod.POST);
 
         { // user without right cannot cancel
             JenkinsRule.WebClient wc = r.createWebClient()
@@ -1256,6 +1284,9 @@ public class QueueTest {
 
         String tooltip = buildAndExtractTooltipAttribute();
         assertThat(tooltip, containsString(expectedLabel.substring(1, expectedLabel.length() - 1)));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
 
     @Test
@@ -1269,6 +1300,9 @@ public class QueueTest {
         String tooltip = buildAndExtractTooltipAttribute();
         assertThat(tooltip, not(containsString("<img")));
         assertThat(tooltip, containsString("&lt;"));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
 
     private String buildAndExtractTooltipAttribute() throws Exception {
